LPS-71164 Fix logic